# rust

./: .gitignore
mars_calc/src/: main.rs
sqlite_test/: Cargo.toml  sales.sqlite
sqlite_test/src/: main.rs
transformer/: Cargo.toml
transformer/data/: config.toml  sales.json  sales_out.json
transformer/src/: main.rs
transformer_complete/: Cargo.toml
transformer_complete/data/: config.toml  sales.sqlite
transformer_complete/src/: main.rs
web_assembly/fib_wasm/: Cargo.toml
web_assembly/fib_wasm/html/: index.html
web_assembly/fib_wasm/src/: lib.rs
web_assembly/hello_rust/: hello_world  hello_world.html  hello_world.js  hello_world.wasm
web_assembly/raw/: a.out.js  a.out.wasm  hello_world.c  helloweb.html  helloweb.js  helloweb.wasm  optimization_check.c  sum.cpp  sum.html  sum.js  sum.ll
web_assembly/walk-the-dog/: Cargo.toml  package-lock.json
web_assembly/walk-the-dog/src/: lib.rs
